DOB in Form now has correct alignment (labels were offset before the user enters text, because labels weren't floating for the dropdowns)

--- a/style/scss/__base/_input.scss
+++ b/style/scss/__base/_input.scss
@@ -109,5 +109,13 @@
       font-size: ms(-1);
       color: $white;
     }
+
+    &--dob {
+      position: relative !important;
+
+      &:not(.input__label--selected) {
+        top: 1rem;
+      }
+    }
   }
 }
