--- a/style/scss/__components/_form.scss
+++ b/style/scss/__components/_form.scss
@@ -15,6 +15,10 @@ div.birthdate {
 	margin-top: -8rem;
 }
 
+.form__cell.select {
+	display: relative;
+}
+
 .form {
 	form {
 		width: 33%;
@@ -42,7 +46,7 @@ div.birthdate {
 	.selectCustom {
 	  position: relative;
 	  width: 100%;
-	  height: 1.5rem;
+	  height: 1.7rem;
 	  font-family: calling-code, courier, monospace;
 		font-weight: 400;
 		font-style: normal;
@@ -114,6 +118,7 @@ div.birthdate {
 	  }
 	}
 
+	//BUTTON
 	.selectCustom-trigger {
 	  position: relative;
 	  width: 100%;
@@ -123,6 +128,11 @@ div.birthdate {
 	  cursor: pointer;
 	  border-bottom: 2px solid $whiteTrans;
 	  transition: $transition__label ease-out;
+	  color: $whiteTrans;
+
+	  &--inactive {
+		color: transparent;
+	  }
 	}
 
 	.selectCustom-trigger::after {
@@ -131,6 +141,7 @@ div.birthdate {
 	  top: 0;
 	  line-height: $height;
 	  right: 0.6rem;
+	  color: white;
 	}
 
 	.selectCustom-trigger:hover {
@@ -160,6 +171,10 @@ div.birthdate {
 
 	.selectCustom.isActive .selectCustom-options {
 	  display: block;
+	}
+
+	.selectCustom.isActive .selectCustom-trigger:not(.selectCustom-trigger--inactive) {
+		color: white;
 	}
 
 	.selectCustom-option {
